# E-Findr

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  thingstodo.md
ai/: .env.example  Dockerfile  requirements.txt
ai/app/: errors.py  face_service.py  main.py  schemas.py
ai/tests/: test_service.py
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql
backend/src/: config.rs  error.rs  main.rs  models.rs  state.rs  tests.rs
backend/src/routes/: auth.rs  events.rs  health.rs  internal.rs  mod.rs  public.rs
backend/src/services/: ai.rs  auth.rs  mod.rs  queue.rs  storage.rs
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/events/: page.tsx
frontend/app/dashboard/events/[id]/: actions.ts  page.tsx
frontend/app/dashboard/events/new/: page.tsx
frontend/app/events/[slug]/: page.tsx
frontend/app/events/[slug]/results/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: auth-form.tsx  copy-link-button.tsx  dashboard-shell.tsx  delete-event-button.tsx  download-qr-button.tsx  logout-button.tsx  new-event-form.tsx  photo-upload-form.tsx  public-search-form.tsx  site-header.tsx  ui.tsx
frontend/lib/: api.ts  auth.server.ts  auth.ts  mock-data.ts
