[package]
name = "efindr-api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
aws-config = "1"
aws-sdk-s3 = "1"
axum = { version = "0.7", features = ["macros", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
http = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
jsonwebtoken = "9"
pgvector = { version = "0.4", features = ["sqlx"] }
redis = { version = "0.25", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
